Bug 1727709 - Simplify nsMenuPopupFrame mouse transparent handling. r=stransky

Make sure it's always in sync with the style.

Keeping a boolean field was useful when we didn't handle dynamic changes
to it, but now we do it's just redundant, and could cause correctness
issues.

Differential Revision: https://phabricator.services.mozilla.com/D124081